# rational_points_on_EC

./: CMakeLists.txt  LOG.md  README.md  log.md  main.cpp
libs/: CMakeLists.txt  ECcurve.cpp  ECcurve.h  Hausaufgabentemplatte.tex  README.md  computation.tex  rational.cpp  rational.h  test.cpp  test.h
release/: EConQ
